fixing progress bar - if you leave site and come back bar flickers, intervall for text & img & bar not working correkt

--- a/style/content.css
+++ b/style/content.css
@@ -321,10 +321,10 @@
 
 
 #recipeText {
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.35s ease-in-out;
 }
 
 
 #recipeTitle{
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.35s ease-in-out;
 }
